# xpmminer

./: .clang-format  .devenv.flake.nix  .gitignore  README.md  default.nix  devenv.nix  devenv.yaml  flake.nix
.devenv/: input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-1-link
contrib/: README.md  build.sh  deploy.sh
opt/: CMakeCache.txt  Makefile  cmake_install.cmake
opt/CPU/: Makefile  cmake_install.cmake  xpmcpuminer
opt/Cuda/: Makefile  cmake_install.cmake
opt/OpenCL/: 1942701469.cl  2217154882650877901.i  4024649737.cl  5104812782089118488.i  Makefile  cmake_install.cmake  xpmclminer
opt/blkmaker/: Makefile  cmake_install.cmake
opt/common/: Makefile  cmake_install.cmake
opt/include/: config.h
src/: CMakeLists.txt
src/CPU/: CMakeLists.txt  ripped.h  rippedFromHp.cpp  rippedFromHp.h  xpmcpuminer.cpp
src/Cuda/: CMakeLists.txt  README  benchmarks.cpp  benchmarks.cu  benchmarks.h  cudautil.cpp  cudautil.h  fermat.cu  helpers.cu  loguru.cpp  loguru.hpp  prime.cpp  prime.h  procs.cu  sha256.cu  sha256.h  sieve.cu  xpmclient.cpp  xpmclient.h
src/Hip/: CMakeLists.txt  HIP_PORT_ANALYSIS.md  benchmarks_hip.cpp  benchmarks_hip.h  benchmarks_kernels_hip.cpp  fermat_hip.cpp  gprimes.cpp  gprimes.h  hiputil.cpp  hiputil.h  hiputil_auto.cpp  hiputil_auto.h  prime.h  procs_hip.cpp  sha256.cpp  sha256_hip.cpp  sieve_hip.cpp  uint256.h  xpmclient.cpp  xpmclient.h  xpmclient_hip.cpp  xpmclient_hip.h
src/OpenCL/: CMakeLists.txt  benchmarks.cpp  benchmarks.h  fmt.h  sha256.h  utils.cpp  utils.h  xpmclminer.cpp
src/blkmaker/: base58.c  blkmaker.c  blkmaker.h  blkmaker_jansson.c  blkmaker_jansson.h  blktemplate.c  blktemplate.h  hex.c  private.h
src/cmake/: FindOpenCL.cmake
src/common/: CSieveOfEratosthenesL1Ext.cpp  getblocktemplate.cpp  primecoin.cpp  system.cpp
src/hipify/: CMakeLists.txt  benchmarks_hip.cpp  benchmarks_hip.h  fermat_hip.cpp  hiputil.cpp  hiputil.h  loguru.cpp  prime.cpp  prime.h  sha256_hip.cpp  sieve_hip.cpp  xpmclient_hip.cpp  xpmclient_hip.h
src/include/: CSieveOfEratosthenesL1Ext.h  Debug.h  getblocktemplate.h  primecoin.h  system.h
